--- a/CSS_files/scroll_back.css
+++ b/CSS_files/scroll_back.css
@@ -2,7 +2,7 @@
   transition: all .25s ease-in-out;
   position: fixed;
   bottom: 0;
-  right: 0;
+  right: -30px;
   display: inline-flex;
 
   cursor: pointer;
@@ -13,7 +13,7 @@
   padding: .25em;
   width: 50px;
   height: 50px;
-  background-color: #F8F8F8;
+  background-color: #dadada;
 
   &.show {
     visibility: visible;
